# ffi-playground

./: .gitignore  Cargo.toml  build.rs
cpplib/: CMakeLists.txt  main.cpp
src/: main.rs
